maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:34: error: not found: value fornt
  if (fornt && !g && d){return 0}
      ^